--- a/src/pages/Experience/experience.css
+++ b/src/pages/Experience/experience.css
@@ -5,3 +5,111 @@
 .cmp-details{
     font-size: 1.1rem;
 }
+
+.exp-card{
+    position: relative;
+    width: 350px;
+    background-color: #fff;
+    box-shadow: 0 10px 30px -15px rgba(0,0,0,0.2);
+    border-radius: 10px;
+    border: 1px solid hsla(0,0%,82.7%,.397);
+}
+
+.exp-banner {
+    background: #383E56 none repeat scroll 0% 0% ;
+    border-radius: 10px 10px 0 0;
+    filter: blur(0);
+    height: 8rem;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.experieced-blurred-div {
+    position: absolute;
+    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.2));
+    filter: blur(5px);
+    height: 8rem;
+    top : 0;
+    left: 0;
+    width: 100%;
+    border-radius: 10px 10px 0 0;
+}
+
+.exp-div-company{
+    position: absolute;
+    background: transparent;
+    height: 5rem;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.exp-text-company {
+    font-size: 22px;
+    padding: 1.5rem;
+    margin: 0;
+    color: #fff;
+    text-align: center;
+    font-weight: 700;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+
+.exp-img {
+    width: 6.5em;
+    height: 6.5em;
+    position: absolute;
+    object-fit: cover;
+    left: 0;
+    right: 0;
+    top: 4.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.3);
+    border-radius: 50%;
+    background: #fff;
+}
+
+.exp-text-details {
+    padding: 1.5rem;
+    margin-top: 1rem;
+    /* margin-bottom: 1rem; */
+}
+
+.exp-text-role {
+    padding-top: 0.5rem;
+    font-size: 22px;
+    text-align: center;
+    color: #383E56;
+    font-weight: 700;
+    margin: 0;
+    line-height: normal;
+}
+
+.exp-text-location {
+    /* padding-top: 0.5rem; */
+    font-size: 14px;
+    text-align: center;
+    font-weight: 700;
+    margin: 0;
+    line-height: normal;
+}
+
+.exp-text-date {
+    font-size: 18px;
+    text-align: center;
+    color: #383E56;
+    margin-bottom: 10px;
+    padding-top: 0.5rem;
+    font-weight: 600;
+}
+
+.subtitle {
+    font-size: 14px;
+}
